Fix Windows input issue